--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <h2 class="text-3xl font-bold text-center text-green-600 mb-8">下载与安装</h2>
         <div class="text-center">
             <p class="mb-4">下载“希沃白板大乱炖”安装器，解锁白板新玩法！</p>
-            <a href="https://deep-sea.lanzn.com/iTdu42xuxuqf" class="btn-primary text-white font-semibold py-3 px-6 rounded-lg">下载安装器（蓝奏云）</a>
+            <a href="https://deep-sea.lanzn.com/iE4n52y96kah" class="btn-primary text-white font-semibold py-3 px-6 rounded-lg">下载安装器（蓝奏云）</a>
             <div class="mt-6">
                 <h3 class="text-xl font-semibold mb-2">安装步骤</h3>
                 <ol class="text-left max-w-md mx-auto">
