--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         <h2 class="text-3xl font-bold text-center text-green-600 mb-8">常见问题</h2>
         <div class="faq-item">
             <div class="faq-question">
-                <h3 class="text-lg font-semibold">、如何获取安装路径</h3>
+                <h3 class="text-lg font-semibold">如何获取安装路径</h3>
             </div>
             <div class="faq-answer">
                 <p>找到你的希沃白板快捷方式，然后右键，打开文件所在位置，打开文件夹的上一个目录就是了，例如<br>
